--- a/browser/virtualization/makefile
+++ b/browser/virtualization/makefile
@@ -1,6 +1,6 @@
 O_FLAGS = -c -fPIC
 SHARED_FLAGS = -shared
-OBJS = mem.o elf_l.o
+OBJS = mem.o elf_l.o util.o
 PROJ_NAME = virtualizer
 
 .PHONY: all
@@ -15,6 +15,9 @@ mem.o: mem.c
 	$(CC) $(O_FLAGS) $<
 
 elf_l.o: elf_l.c
+	$(CC) $(O_FLAGS) $<
+
+util.o: util.c
 	$(CC) $(O_FLAGS) $<
 
 .PHONY: clean
