--- a/browser/makefile
+++ b/browser/makefile
@@ -1,9 +1,15 @@
+CC = gcc
+CXX = g++
 OBJOP = -c
-OBJS = exec.o
+OBJS = openapp.o spawntab.o
 OUTFILE = browser.bin
+QTL = $$(pkg-config --cflags --libs Qt5Widgets)
 
-all: exec.o
-	$(CC) browser.c $(OBJS) -o $(OUTFILE)
+all: $(OBJS)
+	$(CXX) $(QTL) -fPIC $(OBJS) main.cc -lX11 -o $(OUTFILE)
 
-exec.o: exec.c
+openapp.o: openapp.c
+	$(CC) $(OBJOP) $< -o $@
+
+spawntab.o: spawntab.c
 	$(CC) $(OBJOP) $< -o $@
