--- a/browser/makefile
+++ b/browser/makefile
@@ -1,8 +1,21 @@
 CC = gcc
 CXX = g++
-OBJOP = -c
-OUTFILE = browser2.bin
-QTL = $$(pkg-config --cflags --libs Qt5Widgets Qt5OpenGL)
 
-all: $(OBJS)
-	$(CXX) $(QTL) -fPIC $(OBJS) main.cc -lX11 -o $(OUTFILE)
+OPS = -fPIC
+OBJS = hcompx.o
+
+OUTFILE = browser.bin
+
+GTK = $(shell pkg-config --cflags --libs gtk4)
+GDK = $(shell pkg-config --cflags --libs gtk4-x11)
+X11 = -lX11
+LINK = $(GTK) $(GDK) $(X11)
+
+all: $(OBJS) xvfbwrapper.py
+	$(CXX) $(LINK) $(OPS) $(OBJS) browser.cc -o $(OUTFILE)
+
+hcompx.o: hcompx.c
+	$(CC) -c $(X11) $< -o $@
+
+xvfbwrapper.py:
+	wget https://raw.githubusercontent.com/cgoldberg/xvfbwrapper/master/xvfbwrapper.py
